unpackaged/main/default/objects/Contact/fields/Active_Membership_Types__c.field-meta.xml
<CustomField>
    <fullName>Active_Membership_Types__c</fullName>
    <label>Active Membership Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>