unpackaged/main/default/objects/Contact/fields/Annual_Donations__c.field-meta.xml
<CustomField>
    <fullName>Annual_Donations__c</fullName>
    <label>Annual Donations</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>