unpackaged/main/default/objects/Contact/fields/Annual_Total_Spent__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total_Spent__c</fullName>
    <label>Annual Total Spent</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>