unpackaged/main/default/objects/Contact/fields/Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>Attendee_Name__c</fullName>
    <label>Attendee Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>