unpackaged/main/default/objects/Contact/fields/Audit_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Audit_Email_Sent__c</fullName>
    <label>Audit Email Sent</label>
    <type>Date</type>
</CustomField>