unpackaged/main/default/objects/Contact/fields/Aug_2021_Workshop__c.field-meta.xml
<CustomField>
    <fullName>Aug_2021_Workshop__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Aug 2021 Workshop</description>
    <label>Aug 2021 Workshop</label>
    <type>Checkbox</type>
</CustomField>