unpackaged/main/default/objects/Contact/fields/Contact_is_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Contact_is_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact is Inactive</label>
    <type>Checkbox</type>
</CustomField>