unpackaged/main/default/objects/Contact/fields/Corp_SF_Tag_Active_NCP__c.field-meta.xml
<CustomField>
    <fullName>Corp_SF_Tag_Active_NCP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active NCP</label>
    <type>Checkbox</type>
</CustomField>