unpackaged/main/default/objects/Contact/fields/Corp_SF_Tag_Associate_Member__c.field-meta.xml
<CustomField>
    <fullName>Corp_SF_Tag_Associate_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Associate Member</label>
    <type>Checkbox</type>
</CustomField>