unpackaged/main/default/objects/Contact/fields/Corp_SF_Tag_Individual_EduSub__c.field-meta.xml
<CustomField>
    <fullName>Corp_SF_Tag_Individual_EduSub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Individual Education Subscription</label>
    <type>Checkbox</type>
</CustomField>