unpackaged/main/default/objects/Contact/fields/Corp_SF_Tag_Licensing_Organization__c.field-meta.xml
<CustomField>
    <fullName>Corp_SF_Tag_Licensing_Organization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licensing Organization</label>
    <type>Checkbox</type>
</CustomField>