unpackaged/main/default/objects/Contact/fields/Corp_SF_Tag_Participating_Member__c.field-meta.xml
<CustomField>
    <fullName>Corp_SF_Tag_Participating_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Participating Member</label>
    <type>Checkbox</type>
</CustomField>