unpackaged/main/default/objects/Contact/fields/Corp_SF_Tag_Rules_User__c.field-meta.xml
<CustomField>
    <fullName>Corp_SF_Tag_Rules_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rules User</label>
    <type>Checkbox</type>
</CustomField>