unpackaged/main/default/objects/Contact/fields/Current_EB__c.field-meta.xml
<CustomField>
    <fullName>Current_EB__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this contact sits on the current NCP Editorial Board</description>
    <inlineHelpText>If checked, this contact sits on the current NCP Editorial Board</inlineHelpText>
    <label>Current EB Member</label>
    <type>Checkbox</type>
</CustomField>