unpackaged/main/default/objects/Contact/fields/Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Restrictions__c</fullName>
    <label>Dietary Restrictions</label>
    <type>TextArea</type>
</CustomField>