unpackaged/main/default/objects/Contact/fields/Directory_Search_Name__c.field-meta.xml
<CustomField>
    <fullName>Directory_Search_Name__c</fullName>
    <formula>FirstName + &#39; &#39; + LastName + &#39; (&#39; +  Account.Name + 
IF(Account.Primary_R_T_Number__c!=null,&#39; &#39;+Account.Primary_R_T_Number__c,&#39;&#39;)
+&#39;)&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in contacts directories in portal</inlineHelpText>
    <label>Directory Search Name</label>
    <type>Text</type>
</CustomField>