unpackaged/main/default/objects/Contact/fields/Donation_Programs__c.field-meta.xml
<CustomField>
    <fullName>Donation_Programs__c</fullName>
    <label>Donation Programs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Save the Whales</fullName>
            </value>
            <value>
                <fullName>Askland Memorial Scholarship</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>