unpackaged/main/default/objects/Contact/fields/DonorApi__Active_Recurring_Gift__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Active_Recurring_Gift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>**System Calculated Field** Indicates wether this contact has an active recurring gift opportunity.</description>
    <inlineHelpText>**System Calculated Field** Indicates wether this contact has an active recurring gift opportunity.</inlineHelpText>
    <label>Active Recurring Gift</label>
    <type>Checkbox</type>
</CustomField>