unpackaged/main/default/objects/Contact/fields/DonorApi__Auto_Calculate_Contact_Greetings__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Auto_Calculate_Contact_Greetings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default value for new contacts is true. When set to true the system will auto update the contact&#39;s personal greeting, personal recognition name, and formal greeting with the system default format. Personal = FirstName, Personal Recognition Name = Salutation FirstName LastName, Formal Greeting = Personal Recognition Name</description>
    <inlineHelpText>Default value for new contacts is true. When set to true the system will auto update the contact&#39;s personal greeting, personal recognition name, and formal greeting with the system default formats.</inlineHelpText>
    <label>Auto Calculate Contact Greetings</label>
    <type>Checkbox</type>
</CustomField>