unpackaged/main/default/objects/Contact/fields/DonorApi__Auto_Calculate_Current_Ask_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Auto_Calculate_Current_Ask_Amount__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Default value for new contacts is true. When set to true the system will auto update the contact&#39;s current ask amount with the amount of the contact&#39;s last gift if the last gift amount is greater than 0.</description>
    <inlineHelpText>Default value for new contacts is true. When set to true the system will auto update the contact&#39;s current ask amount with the amount of the contact&#39;s last gift if the last gift amount is greater than 0.</inlineHelpText>
    <label>Auto Calculate Current Ask Amount</label>
    <type>Checkbox</type>
</CustomField>