unpackaged/main/default/objects/Contact/fields/DonorApi__Current_Ask_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Current_Ask_Amount__c</fullName>
    <description>What is the target current ask amount for this person?</description>
    <inlineHelpText>What is the target current ask amount for this person?</inlineHelpText>
    <label>Current Ask Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>