unpackaged/main/default/objects/Contact/fields/DonorApi__Deceased__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check if the contact is deceased</description>
    <inlineHelpText>check if the contact is deceased</inlineHelpText>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>