unpackaged/main/default/objects/Contact/fields/DonorApi__Default_Greeting__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Default_Greeting__c</fullName>
    <formula>IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Personal Greeting&quot;), DonorApi__Personal_Greeting__c,
IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Personal Recognition Name&quot;), DonorApi__Personal_Recognition_Name__c,
IF(ISPICKVAL(DonorApi__Default_Greeting_Type__c,&quot;Formal Greeting&quot;), DonorApi__Formal_Greeting__c,DonorApi__Personal_Greeting__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Greeting</label>
    <type>Text</type>
</CustomField>