unpackaged/main/default/objects/Contact/fields/DonorApi__Default_Greeting_Type__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Default_Greeting_Type__c</fullName>
    <description>*DO NOT CHANGE*</description>
    <inlineHelpText>*DO NOT CHANGE*</inlineHelpText>
    <label>Default Greeting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal Greeting</fullName>
                <default>true</default>
                <label>Personal Greeting</label>
            </value>
            <value>
                <fullName>Formal Greeting</fullName>
            </value>
            <value>
                <fullName>Personal Recognition Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>