unpackaged/main/default/objects/Contact/fields/DonorApi__Direct_Mail_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Direct_Mail_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Exclude this contact from all direct mail campaigns.</description>
    <inlineHelpText>Exclude this contact from all direct mail campaigns.</inlineHelpText>
    <label>Direct Mail Opt Out</label>
    <type>Checkbox</type>
</CustomField>