unpackaged/main/default/objects/Contact/fields/DonorApi__Do_Not_Solicit__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Do_Not_Solicit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not solicit this contact. By default when flagged the contact will be excluded from all campaigns.</description>
    <inlineHelpText>Do not solicit this contact. By default when flagged the contact will be excluded from all campaigns.</inlineHelpText>
    <label>Do Not Solicit</label>
    <type>Checkbox</type>
</CustomField>