unpackaged/main/default/objects/Contact/fields/DonorApi__First_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__First_Gift_Date__c</fullName>
    <description>**System Calculated Field** Calculates the first gift received date for all related gifts.</description>
    <inlineHelpText>**System Calculated Field** Calculates the first gift received date for all related gifts.</inlineHelpText>
    <label>First Gift Date</label>
    <type>Date</type>
</CustomField>