unpackaged/main/default/objects/Contact/fields/DonorApi__Formal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Formal_Greeting__c</fullName>
    <description>Formal Greeting for the contact</description>
    <inlineHelpText>Formal Greeting for the contact</inlineHelpText>
    <label>Formal Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>