unpackaged/main/default/objects/Contact/fields/DonorApi__Gift_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gift_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated Field** Counts the total number of related gift opportunities (Sales Orders with type &quot;Gift Opportunity&quot;) -- for the contact.</description>
    <inlineHelpText>**System Calculated Field** Counts the total number of related gift opportunities (Sales Orders with type &quot;Gift Opportunity&quot;) -- for the contact.</inlineHelpText>
    <label>Gift Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>