unpackaged/main/default/objects/Contact/fields/DonorApi__Gifts_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gifts_Outstanding__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated Field** Sum of the balance due for all outstanding pledges.</description>
    <inlineHelpText>**System Calculated Field** Sum of the balance due for all outstanding pledges.</inlineHelpText>
    <label>Gifts Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>