unpackaged/main/default/objects/Contact/fields/DonorApi__Gifts_Received__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Gifts_Received__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated Field** Sum of hard credits.</description>
    <inlineHelpText>**System Calculated Field** Sum of hard credits.</inlineHelpText>
    <label>Gifts Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>