unpackaged/main/default/objects/Contact/fields/DonorApi__Include_in_Household_Greetings__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Include_in_Household_Greetings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If set to true, the contact will be included on all household greetings. This flag will automatically populate to true if the contact is the primary contact on a related account.</description>
    <inlineHelpText>If set to true, the contact will be included on all household greetings. This flag will automatically populate to true if the contact is the primary contact on a related account.</inlineHelpText>
    <label>Include in Household Greetings</label>
    <type>Checkbox</type>
</CustomField>