unpackaged/main/default/objects/Contact/fields/DonorApi__Languages__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Languages__c</fullName>
    <description>Languages that the contact can speak.</description>
    <inlineHelpText>Languages that the contact can speak.</inlineHelpText>
    <label>Languages</label>
    <length>100</length>
    <type>Text</type>
</CustomField>