unpackaged/main/default/objects/Contact/fields/DonorApi__Largest_Gift__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Largest_Gift__c</fullName>
    <description>**System Calculated Field** Calculates the largest gift amount for all related gifts.</description>
    <inlineHelpText>**System Calculated Field** Calculates the largest gift amount for all related gifts.</inlineHelpText>
    <label>Largest Gift</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>