unpackaged/main/default/objects/Contact/fields/DonorApi__Last_Gift_Amount__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Last_Gift_Amount__c</fullName>
    <defaultValue>0.00</defaultValue>
    <description>**System Calculated Field** Calculates the amount of the last gift received from the related contact.</description>
    <inlineHelpText>**System Calculated Field** Calculates the amount of the last gift received from the related contact.</inlineHelpText>
    <label>Last Gift Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>