unpackaged/main/default/objects/Contact/fields/DonorApi__Last_Gift_Date__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Last_Gift_Date__c</fullName>
    <description>**System Calculated Field** Calculates the last gift date for all related gifts.</description>
    <inlineHelpText>**System Calculated Field** Calculates the last gift date for all related gifts.</inlineHelpText>
    <label>Last Gift Date</label>
    <type>Date</type>
</CustomField>