unpackaged/main/default/objects/Contact/fields/DonorApi__Num_Open_Gift_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Num_Open_Gift_Opportunities__c</fullName>
    <defaultValue>0</defaultValue>
    <description>**System Calculated Field** Calculates the total number of open gift opportunities related to the contact.</description>
    <inlineHelpText>**System Calculated Field** Calculates the total number of open gift opportunities related to the contact.</inlineHelpText>
    <label>Num Open Gift Opportunities</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>