unpackaged/main/default/objects/Contact/fields/DonorApi__Personal_Greeting__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Personal_Greeting__c</fullName>
    <description>Personal greeting to be used for communications and solicitations to the contact.</description>
    <inlineHelpText>Personal greeting to be used for communications and solicitations to the contact.</inlineHelpText>
    <label>Personal Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>