unpackaged/main/default/objects/Contact/fields/DonorApi__Personal_Recognition_Name__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Personal_Recognition_Name__c</fullName>
    <description>If this person gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</description>
    <inlineHelpText>If this person gives anonymously, or preferrs to be recognized by a different name in donor acknowledgement materials, what is it?</inlineHelpText>
    <label>Personal Recognition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>