unpackaged/main/default/objects/Contact/fields/DonorApi__Primary__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates wether this contact is the primary contact for the related account.</description>
    <inlineHelpText>Indicates wether this contact is the primary contact for the related account.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>