unpackaged/main/default/objects/Contact/fields/DonorApi__Primary_Relationship_Manager__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Primary_Relationship_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Select the person who is responsible for owning this relationship with this constituent. This will create a new record in this contacts relationship related list.</description>
    <inlineHelpText>Select the person who is responsible for owning this relationship with this constituent. This will create a new record in this contacts relationship related list.</inlineHelpText>
    <label>Primary Relationship Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Relationship Manager (Contacts)</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>