unpackaged/main/default/objects/Contact/fields/DonorApi__Spouse__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Spouse__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spouse</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts (Spouse)</relationshipLabel>
    <relationshipName>Spouse_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>