unpackaged/main/default/objects/Contact/fields/DonorApi__Suffix__c.field-meta.xml
<CustomField>
    <fullName>DonorApi__Suffix__c</fullName>
    <description>List of common academic, honorary, professional, and generational suffixes.</description>
    <inlineHelpText>List of common academic, honorary, professional, and generational suffixes.</inlineHelpText>
    <label>Suffix</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>D.D.S.</fullName>
            </value>
            <value>
                <fullName>D.M.D.</fullName>
            </value>
            <value>
                <fullName>D.V.M.</fullName>
            </value>
            <value>
                <fullName>Ed.D.</fullName>
            </value>
            <value>
                <fullName>Esq.</fullName>
            </value>
            <value>
                <fullName>II</fullName>
            </value>
            <value>
                <fullName>III</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>Jr.</fullName>
            </value>
            <value>
                <fullName>M.D.</fullName>
            </value>
            <value>
                <fullName>Ph.D.</fullName>
            </value>
            <value>
                <fullName>R.N.</fullName>
            </value>
            <value>
                <fullName>R.N.C.</fullName>
            </value>
            <value>
                <fullName>Ret.</fullName>
            </value>
            <value>
                <fullName>Sr.</fullName>
            </value>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>USAF</fullName>
            </value>
            <value>
                <fullName>USAFR</fullName>
            </value>
            <value>
                <fullName>USAR</fullName>
            </value>
            <value>
                <fullName>USCG</fullName>
            </value>
            <value>
                <fullName>USMC</fullName>
            </value>
            <value>
                <fullName>USMCR</fullName>
            </value>
            <value>
                <fullName>USN</fullName>
            </value>
            <value>
                <fullName>USNR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>