unpackaged/main/default/objects/Contact/fields/DRCTS__Directory_Preferences__c.field-meta.xml
<CustomField>
    <fullName>DRCTS__Directory_Preferences__c</fullName>
    <description>The JSON is used to hide the fields on the directory detail view.</description>
    <inlineHelpText>The JSON is used to hide the fields on the directory detail view.</inlineHelpText>
    <label>Directory Preferences</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>