unpackaged/main/default/objects/Contact/fields/FON_Are_you_a_Member__c.field-meta.xml
<CustomField>
    <fullName>FON_Are_you_a_Member__c</fullName>
    <label>FON-Are you a Member</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>