unpackaged/main/default/objects/Contact/fields/FON_Attorney_Group__c.field-meta.xml
<CustomField>
    <fullName>FON_Attorney_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the is a current member of the Legal workign group</inlineHelpText>
    <label>Legal WG</label>
    <type>Checkbox</type>
</CustomField>