unpackaged/main/default/objects/Contact/fields/FON_Candidate_Id_Generated_On__c.field-meta.xml
<CustomField>
    <fullName>FON_Candidate_Id_Generated_On__c</fullName>
    <label>Candidate Id Generated On</label>
    <type>DateTime</type>
</CustomField>