unpackaged/main/default/objects/Contact/fields/FON_Confirm_the_Info_is_Accurate_Current__c.field-meta.xml
<CustomField>
    <fullName>FON_Confirm_the_Info_is_Accurate_Current__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Required field on the Associate Membership join process. Default is unchecked.</inlineHelpText>
    <label>Confirm the Info is Accurate &amp; Current</label>
    <type>Checkbox</type>
</CustomField>