unpackaged/main/default/objects/Contact/fields/FON_ECCHO_Committee_Title__c.field-meta.xml
<CustomField>
    <fullName>FON_ECCHO_Committee_Title__c</fullName>
    <description>Committee titles: i.e. Operations Committee Chair, Business Committee Chair, etc.</description>
    <inlineHelpText>Committee titles: i.e. Operations Committee Chair, Business Committee Chair, etc.</inlineHelpText>
    <label>ECCHO Committee Title</label>
    <length>81</length>
    <type>Text</type>
</CustomField>