unpackaged/main/default/objects/Contact/fields/FON_ECCHO_Rules_Recommendation_Source__c.field-meta.xml
<CustomField>
    <fullName>FON_ECCHO_Rules_Recommendation_Source__c</fullName>
    <inlineHelpText>Free text. Spot for how the Contact heard about ECCHO Rules, either by Member, Sponsoring org, Employee, Conference, Individual, Publication, Other</inlineHelpText>
    <label>ECCHO Rules Recommendation Source</label>
    <type>TextArea</type>
</CustomField>