unpackaged/main/default/objects/Contact/fields/FON_Emergency_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_Emergency_Contact_Name__c</fullName>
    <label>Emergency Contact Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>