unpackaged/main/default/objects/Contact/fields/FON_Emergency_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>FON_Emergency_Contact_Number__c</fullName>
    <label>Emergency Contact Number</label>
    <type>Phone</type>
</CustomField>