unpackaged/main/default/objects/Contact/fields/FON_eStore_Username__c.field-meta.xml
<CustomField>
    <fullName>FON_eStore_Username__c</fullName>
    <inlineHelpText>Username given when an account is created</inlineHelpText>
    <label>eStore Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>