unpackaged/main/default/objects/Contact/fields/FON_Exam_Year__c.field-meta.xml
<CustomField>
    <fullName>FON_Exam_Year__c</fullName>
    <label>Exam Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>