unpackaged/main/default/objects/Contact/fields/FON_Has_been_audited_in_the_last_5_years__c.field-meta.xml
<CustomField>
    <fullName>FON_Has_been_audited_in_the_last_5_years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has been audited in the last 5 years</label>
    <type>Checkbox</type>
</CustomField>