unpackaged/main/default/objects/Contact/fields/FON_Has_Rules_Access__c.field-meta.xml
<CustomField>
    <fullName>FON_Has_Rules_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Denotes if a user has access to the Rules. Manually checked. specific members have access and there will be the several one-offs which TCH can grant rules access at any time. A badge is added to the Contact record when access is granted. Default unchecked</description>
    <inlineHelpText>Denotes if a user has access to the Rules. Manually checked. Specific members have access and there will be several one-offs which TCH can grant rules access at any time. A badge is added to the Contact record when access is granted. Default unchecked</inlineHelpText>
    <label>Has Rules Access?</label>
    <type>Checkbox</type>
</CustomField>