unpackaged/main/default/objects/Contact/fields/FON_How_did_you_hear_about_ECCHO_Rules__c.field-meta.xml
<CustomField>
    <fullName>FON_How_did_you_hear_about_ECCHO_Rules__c</fullName>
    <inlineHelpText>Used in form prior to Contact becoming an Active User within the Member Portal</inlineHelpText>
    <label>How did you hear about ECCHO Rules?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECCHO Member</fullName>
            </value>
            <value>
                <fullName>ECCHO Sponsoring Member</fullName>
            </value>
            <value>
                <fullName>ECCHO Employee</fullName>
            </value>
            <value>
                <fullName>Conference/Seminar/Session</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Publication</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>