unpackaged/main/default/objects/Contact/fields/FON_Interest_in_ECCHO_Rules__c.field-meta.xml
<CustomField>
    <fullName>FON_Interest_in_ECCHO_Rules__c</fullName>
    <inlineHelpText>Asked in form prior to Contact becoming an Active user within the Member Portal</inlineHelpText>
    <label>Interest in ECCHO Rules?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested in possibly becoming an ECCHO Member</fullName>
            </value>
            <value>
                <fullName>Interested in possibly becoming an ECCHO Sponsoring Organization</fullName>
            </value>
            <value>
                <fullName>NCP Exam Registration</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>