unpackaged/main/default/objects/Contact/fields/FON_Is_Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Billing_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Billing Contact</label>
    <type>Checkbox</type>
</CustomField>