unpackaged/main/default/objects/Contact/fields/FON_Is_Business_Committee_Alternate__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Business_Committee_Alternate__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually check when a contact is a known Business Committee Alternate. Default is unchecked.</inlineHelpText>
    <label>Is Business Committee Alternate</label>
    <type>Checkbox</type>
</CustomField>