unpackaged/main/default/objects/Contact/fields/FON_Is_Main_Business_Committee_Contact__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Main_Business_Committee_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check when the contact is a Business Committee Main Contact. Default is unchecked.</inlineHelpText>
    <label>Is Main Business Committee Contact</label>
    <type>Checkbox</type>
</CustomField>