unpackaged/main/default/objects/Contact/fields/FON_Is_Main_Operations_Committee_Contact__c.field-meta.xml
<CustomField>
    <fullName>FON_Is_Main_Operations_Committee_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Manually check when a contact is a known Main Operations Committee Contact. Default is unchecked.</inlineHelpText>
    <label>Is Main Operations Committee Contact</label>
    <type>Checkbox</type>
</CustomField>